--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,9 @@ theme: minima
 
 collections:
   wewes:
-    dd: d
+    output: false
   formations:
     output: true
+  expertises:
+    output: false
+
