--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: ruby
 rvm:
   - 2.1
-install: gem install jekyll -v 3.2.1 && gem install s3_website
+install: gem install jekyll -v 3.2.1 && gem install s3_website && gem install minima
 script: jekyll build
 after_success: s3_website push
