--- a/s3_website.yml
+++ b/s3_website.yml
@@ -1,3 +1,9 @@
 s3_id: <%= ENV['S3_ACCESS_KEY_ID'] %>
 s3_secret: <%= ENV['S3_SECRET_KEY'] %>
 s3_bucket: www.wescale.fr
+max-age:
+  "images/*": 864000
+  "js/*": 86400
+  "css/*": 86400
+  "*": 86400
+  
