--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script: jekyll build
 
 deploy:
   provider: script
-  script: deploy-to-s3.sh
+  script: rvm $TRAVIS_RUBY_VERSION do s3_website push --force
   skip_cleanup: true
   on:
     branch: master
