--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 
 before_install:
 - docker pull jekyll/jekyll
-- docker pull opendecide/s3_website
+- docker pull attensee/s3_website
 
 language: ruby
 rvm:
